# arguments

api/: README.md  pyproject.toml
api/src/api/: app.py  get_parameter.py  set_parameter.py
gui/: package-lock.json  package.json
gui/src/: App.vue
gui/src/components/: ActivityTable.vue  DynamicForm.vue  FormField.vue
gui/src/types/: schema.ts
