[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "nduvalhall", email = "nduvalhall@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi", "uvicorn"]

[tool.poetry]
packages = [{ include = "api", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
